Improve API, remove axious, create aliases for generated types & enums
