# server/src/main/java/dmo/server/api/v1/dto/AnimeDto.java
@@ -13,7 +13,6 @@ public class AnimeDto {
     @ApiModelProperty(required = true)
     private List<AnimeTitleDto> titles;
 
-    @ApiModelProperty(required = true,
-            allowableValues = "MOVIE, OVA, TV_SERIES, TV_SPECIAL, WEB, MUSIC_VIDEO, OTHER, UNKNOWN")
-    private String type;
+    @ApiModelProperty(required = true)
+    private AnimeTypeDto type;
 }
