# server/src/main/java/dmo/server/api/v1/dto/AnimeTypeDto.java
@@ -1,0 +1,5 @@
+package dmo.server.api.v1.dto;
+
+public enum AnimeTypeDto {
+    MOVIE, OVA, TV_SERIES, TV_SPECIAL, WEB, MUSIC_VIDEO, OTHER, UNKNOWN
+}
