# server/src/main/java/dmo/server/api/v1/mapper/AnimeMapper.java
@@ -16,15 +16,11 @@ import java.util.Optional;
 @Mapper(componentModel = "spring", unmappedTargetPolicy = ReportingPolicy.ERROR)
 public interface AnimeMapper {
 
-    //Anime fromDto(AnimeDto dto);
-
-    AnimeLightDto toAnimeLightDto(Anime entity);
-
     AnimeDto toAnimeDto(Anime entity);
 
-    List<AnimeLightDto> toAnimeDtoList(List<Anime> entities);
+    List<AnimeDto> toAnimeDtoList(List<Anime> entities);
 
-    default PageDto<AnimeLightDto> toAnimePageDto(Page<Anime> page) {
+    default PageDto<AnimeDto> toAnimePageDto(Page<Anime> page) {
         return new PageDto<>(
                 page.getNumber(),
                 page.getSize(),
@@ -50,33 +46,7 @@ public interface AnimeMapper {
         );
     }
 
-    default String toAnimeStatusDtoEnum(AnimeStatus.Status status) {
-        return Optional.ofNullable(status).map(AnimeStatus.Status::name).orElse(null);
-    }
-
-    default AnimeStatus.Status fromAnimeStatusDtoEnum(String status) {
-        return Optional.ofNullable(status).map(AnimeStatus.Status::valueOf).orElse(null);
-    }
-
-    @Mapping(target = "status", ignore = true)
-    void updateAnimeStatus(Anime entity, @MappingTarget AnimeStatusDto dto);
-
-    default void updateAnimeStatus(AnimeStatus entity, @MappingTarget AnimeStatusDto dto) {
-        var status = toAnimeStatusDtoEnum(entity.getStatus());
-        dto.setStatus(status);
-    }
-
-    default AnimeStatusDto toAnimeStatusDto(AnimeStatus entity) {
-        if (entity == null) {
-            return null;
-        }
-
-        var result = new AnimeStatusDto();
-        updateAnimeStatus(entity.getAnime(), result);
-        updateAnimeStatus(entity, result);
-
-        return result;
-    }
+    AnimeStatusDto toAnimeStatusDto(AnimeStatus entity);
 
     List<AnimeStatusDto> toAnimeStatusDtoList(List<AnimeStatus> entities);
 
@@ -90,4 +60,8 @@ public interface AnimeMapper {
                 toAnimeStatusDtoList(page.getContent())
         );
     }
+
+    @Mapping(target = "user", ignore = true)
+    @Mapping(target = "anime", ignore = true)
+    void updateAnimeStatus(UpdateAnimeStatusDto update, @MappingTarget AnimeStatus entity);
 }
